// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Column > should match snapshot - width full 1`] = `
<div
  class="nhsuk-grid-column-full"
  data-testid="column"
>
  What is your name?
</div>
`;

exports[`Column > should match snapshot - width one-half 1`] = `
<div
  class="nhsuk-grid-column-one-half"
  data-testid="column"
>
  What is your name?
</div>
`;

exports[`Column > should match snapshot - width one-quarter 1`] = `
<div
  class="nhsuk-grid-column-one-quarter"
  data-testid="column"
>
  What is your name?
</div>
`;

exports[`Column > should match snapshot - width one-third 1`] = `
<div
  class="nhsuk-grid-column-one-third"
  data-testid="column"
>
  What is your name?
</div>
`;

exports[`Column > should match snapshot - width three-quarters 1`] = `
<div
  class="nhsuk-grid-column-three-quarters"
  data-testid="column"
>
  What is your name?
</div>
`;

exports[`Column > should match snapshot - width two-thirds 1`] = `
<div
  class="nhsuk-grid-column-two-thirds"
  data-testid="column"
>
  What is your name?
</div>
`;

exports[`Column > should match snapshot 1`] = `
<div
  class="nhsuk-grid-column-full"
  data-testid="column"
>
  What is your name?
</div>
`;
